# archiadb

./: Cargo.toml  LICENSE  README.md  design.md
.github/workflows/: build.yml  coverage.yml
src/: alloc.rs  btree.rs  bufs.rs  concache.rs  db.rs  file.rs  fio.rs  intrusive.rs  key.rs  lib.rs  local_pool.rs  lock.rs  main.rs  meta.rs  spin.rs  swapper.rs  test_util.rs  trie.rs  txnmap.rs  util.rs
