[package]
name = "archiadb"
version = "0.1.0"
edition = "2024"

[lib]
name = "archiadb"
path = "src/lib.rs"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-deque", "crossbeam-queue"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tokio-uring = { version = "0.5.0", features = ["bytes"] }
rustix = { version = "1.1.4", features = ["fs"] }
crc32c = "0.6.8"
zerocopy = { version = "0.8", features = ["derive"] }
bytes = "1.0"
function_name = "0.3.0"
