[package]
name = "archiadb"
version = "0.0.1"
edition = "2024"
rust-version = "1.94"
description = "hierarchical embedded database"
repository = "https://github.com/wilgaboury/archiadb"
license = "MIT"

[lib]
name = "archiadb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bon = "3.9"
crossbeam = "0.8"
dashmap = "6.1.0"
function_name = "0.3.0"
io-uring = "0.7"
rustix = { version = "1.1.4", features = ["fs", "io_uring"] }
libc = "0.2"
parking_lot = "0.12.5"
tokio = { version = "1", features = ["sync"] }
zerocopy = { version = "0.8", features = ["derive"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
